2-0/default/data/steps/kgateway-labs/rollouts/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: reviews-rollout
  labels:
    app: reviews
spec:
  replicas: 1
  strategy:
    canary:
      stableService: reviews-stable
      canaryService: reviews-canary
      trafficRouting:
        managedRoutes:
        - name: qa-header
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoutes:
            - name: bookinfo-reviews
              useHeaderRoutes: true
            namespace: default
      steps:
      - setCanaryScale:
          replicas: 1
      - setHeaderRoute:
          name: qa-header
          match:
          - headerName: role
            headerValue:
              exact: qa
      - pause: {}
      - setWeight: 10
      - pause: {duration: 7s}
      - setWeight: 20
      - pause: {duration: 7s}
      - setWeight: 40
      - pause: {duration: 7s}
      - setWeight: 60
      - pause: {duration: 7s}
      - setWeight: 100
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: reviews
  template:
    metadata:
      labels:
        app: reviews
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
      - name: reviews
        image: docker.io/istio/examples-bookinfo-reviews-v1:1.20.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
