2-0/default/data/steps/kgateway-labs/rollouts/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-stable
  labels:
    app: reviews
    service: reviews
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-canary
  labels:
    app: reviews
    service: reviews
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews
