2-0/default/data/steps/kgateway-labs/rollouts/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookinfo-reviews
spec:
  parentRefs:
  - name: my-gateway
  hostnames:
  - bookinfo.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /reviews
    backendRefs:
    - name: reviews-canary
      port: 9080
    - name: reviews-stable
      port: 9080
